--- a/templates/dashboard/solvedproblems.html
+++ b/templates/dashboard/solvedproblems.html
@@ -16,6 +16,7 @@
     }
 
 
+
     </style>
 </head>
 
@@ -74,7 +75,7 @@
                                 </a>
                                 <div aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu">
                                     <a class="dropdown-item" href="#">Solved By Me</a>
-                                    <a class="dropdown-item" href="#">Others</a>
+                                    <a class="dropdown-item" href="#">Solved By Others</a>
                                 </div>
                             </li>
                         </ul>
@@ -96,7 +97,7 @@
                                 <h6 class="m-0 font-weight-bold text-primary"> Problem Type:
                                     {{solved.solved_problem.problem_type}}
                                     | Solved By : {{solved.solved_by.full_name}}
-                                <span class="badge badge-primary" style="float: right;">verified</span>
+                                    <span class="badge badge-primary" style="float: right;">verified</span>
                                 </h6>
                             </div>
 
@@ -122,55 +123,10 @@
                                             <i class="fas fa-check"></i>
                                         </span>
                                     <span class="text">Not Solve </span>
-                                </a> <a class="btn btn-warning btn-icon-split btn-sm " data-target="#exampleModalCenter"
-                                        data-toggle="modal"
-                                        href="#">
-                                        <span class="icon text-white-50">
-                                            <i class="fas fa-exclamation-triangle"></i>
-                                        </span>
-                                <span class="text">Report</span>
-                            </a>
+                                </a>
 
                             </div>
                             <!-- Modal -->
-                            <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade"
-                                 id="exampleModalCenter"
-                                 role="dialog" tabindex="-1">
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalCenterTitle">Report Problem</h5>
-                                            <button aria-label="Close" class="close" data-dismiss="modal" type="button">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form>
-                                                <div class="form-group">
-                                                    <select class="form-control">
-                                                        <option>Default select</option>
-                                                        <option>Fake Details</option>
-                                                        <option>Contact Number fake</option>
-                                                        <option>Other</option>
-                                                    </select>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="exampleFormControlTextarea1">Mention Problem against
-                                                        Request </label>
-                                                    <textarea class="form-control" id="exampleFormControlTextarea1"
-                                                              rows="3"></textarea>
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button class="btn btn-secondary" data-dismiss="modal" type="button">Close
-                                            </button>
-                                            <button class="btn btn-primary" type="button">Submit</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
                         {%endfor%}
                         <!-- Card End -->
