--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -12,11 +12,11 @@
             <form
                     class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                 <div class="input-group">
-                    <input aria-describedby="basic-addon2" aria-label="Search"
+                    <input disabled aria-describedby="basic-addon2" aria-label="Search"
                            class="form-control bg-light border-0 small"
-                           placeholder="Search for..." type="text">
+                           placeholder="" type="text">
                     <div class="input-group-append">
-                        <button class="btn btn-primary" type="button">
+                        <button class="btn btn-primary" type="button" disabled>
                             <i class="fas fa-search fa-sm"></i>
                         </button>
                     </div>
