--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -15,7 +15,10 @@
 
 <body class="bg-gradient-primary">
 <script>
-$( document ).ready(function() {
+$(document).ready(function() {
+    if(!window.confirmationResult){
+        $('.hide').attr('disabled',true);
+    }
     $('#admDivCheck').css('display','none');
     $('select#getFname').on('change', (event) => {
         //console.log($('select#getFname').val());
@@ -91,7 +94,7 @@ $( document ).ready(function() {
                                     <div class="form-group row">
                                         <div class="form-group col-sm-6 mb-3 mb-sm-0">
                                             <label>Gender</label>
-                                            <select class="form-control select1" id="gender" name="gender" required>
+                                            <select class="form-control select1 hide" id="gender" name="gender" required>
                                                 <option disabled hidden selected value="">Select Gender</option>
                                                 <option value="M">Male</option>
                                                 <option value="F">Female</option>
@@ -99,7 +102,7 @@ $( document ).ready(function() {
                                         </div>
                                         <div class="form-group col-sm-6">
                                             <label>Account Type</label>
-                                            <select class="form-control select2" id="getFname" name="account_type" required>
+                                            <select class="form-control select2 hide" id="getFname" name="account_type" required>
                                                 <option disabled hidden selected value="">Select Account Type</option>
                                                 <option value="individual">Individual</option>
                                                 <option value="group">Group</option>
@@ -110,7 +113,7 @@ $( document ).ready(function() {
                                     <div class="form-group row">
                                         <div class="form-group col-sm-6 mb-3 mb-sm-0">
                                             <label>State</label>
-                                            <select class="form-control select2" id="state" name="state" required>
+                                            <select class="form-control select2 hide" id="state" name="state" required>
                                                 <option disabled hidden selected value="">Select State</option>
                                                 {% for state in states %}
                                                 <option value="{{ state.pk }}">{{state.name}}</option>
@@ -119,7 +122,7 @@ $( document ).ready(function() {
                                         </div>
                                         <div class="form-group col-sm-6">
                                             <label>City</label>
-                                            <select class="form-control select2" id="city" name="city" required>
+                                            <select class="form-control select2 hide" id="city" name="city" required>
                                                 <option disabled hidden selected value="">Select City</option>
 
                                             </select>
@@ -128,37 +131,37 @@ $( document ).ready(function() {
                                     <div class="form-group">
                                         <label>Address</label>
                                         <!--									{{ form2.address|add_class:"form-control" }}-->
-                                        <input class="form-control " id="address" name="address"
+                                        <input class="form-control hide" id="address" name="address"
                                                placeholder="Enter Your Address"
                                                type="text" required>
                                     </div>
                                     <div class="form-group">
                                         <label>Profession</label>
                                         <!--									{{ form2.profession|add_class:"form-control" }}-->
-                                        <input class="form-control " id="profession" name="profession"
+                                        <input class="form-control hide" id="profession" name="profession"
                                                placeholder="Enter Your Profession"
                                                type="text" required>
                                     </div>
                                     <div class="form-group" id="admDivCheck">
                                         <label>Group Name</label>
-                                        <input class="form-control" name="groupname" placeholder="Enter Group Name/Oraganization Name"
+                                        <input class="form-control hide" name="groupname" placeholder="Enter Group Name/Oraganization Name"
                                                type="text">
                                     </div>
                                     <div class="form-group ">
                                         <label>Problem Types</label>
-                                        <select class="col-12 form-control" name="problemtypes[]" id="demo" multiple></select>
+                                        <select class="form-control hide" name="problemtypes[]" id="demo" multiple></select>
                                     </div>
 
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
                                             <label>Create Password</label>
-                                            {{ form.password1|add_class:"form-control" }}
+                                            {{ form.password1|add_class:"form-control hide" }}
                                             <!--                                    <input class="form-control " id="exampleInputPassword"-->
                                             <!--                                           name="password1" placeholder="Password" type="password">-->
                                         </div>
                                         <div class="col-sm-6">
                                             <label>Confirm Password</label>
-                                            {{ form.password2|add_class:"form-control" }}
+                                            {{ form.password2|add_class:"form-control hide" }}
 
                                             <!--                                    <input class="form-control " id="exampleRepeatPassword"-->
                                             <!--                                           name="password2" placeholder="Repeat Password" type="password">-->
@@ -171,7 +174,7 @@ $( document ).ready(function() {
                                             </h6>
 
                                     </div>
-                                    <button class="btn btn-primary btn-block" type="submit">
+                                    <button class="btn btn-primary btn-block hide" type="submit">
                                         Register
                                     </button>
                             <hr>
@@ -219,14 +222,14 @@ $( document ).ready(function() {
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDax4_4FwNnNlyfRwIGq6_ROmOu7Cdivao",
-    authDomain: "react-projects-d18c1.firebaseapp.com",
-    databaseURL: "https://react-projects-d18c1-default-rtdb.firebaseio.com",
-    projectId: "react-projects-d18c1",
-    storageBucket: "react-projects-d18c1.appspot.com",
-    messagingSenderId: "640347701955",
-    appId: "1:640347701955:web:c082ce8cc85bc82e585876"
+   var firebaseConfig = {
+    apiKey: "AIzaSyCDzI33Bp7z_gd18vc5p3jEESrp8d4zIho",
+    authDomain: "devdoot-ekatta.firebaseapp.com",
+    projectId: "devdoot-ekatta",
+    storageBucket: "devdoot-ekatta.appspot.com",
+    messagingSenderId: "448742250467",
+    appId: "1:448742250467:web:522ea29ed310bfbadab2d6",
+    measurementId: "G-TD4S9JTKGC"
   };
   // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
@@ -299,6 +302,7 @@ firebase.initializeApp(firebaseConfig);
                 $('#otp-error').css('display','block');
                 $('#otp-error').attr('class','alert alert-success');
                 $('#otp-error').html("Mobile number Verified.");
+                $('.hide').attr('disabled',false);
 
             }).catch((error) => {
                 $('#otp-error').css('display','block');
@@ -320,26 +324,8 @@ firebase.initializeApp(firebaseConfig);
 </script>
 
 <!--Dynamic City selection from state id-->
-<script>
 
-    $("#state").change(function () {
-      var url = $("#locationform").attr("data-location-url");  // get the url of the `cities` view
-      var state_id = $(this).val();  // get the selected state ID from the HTML input
-      $.ajax({                       // initialize an AJAX request
-        type: "GET",
-        url: url,                    // set the url of the request (= localhost:8000/load-courses/)
-        data: {
-          'state_id': state_id       // add the programming id to the GET parameters
-        },
-        success: function (data) {   // `data` is the return of the `load_courses` view function
-          $("#city").html(data);  // replace the contents of the course input with the data that came from the server
-        }
-      });
-
-    });
-
-
-</script>
+<script src="{%static 'js/cityload.js'%}"></script>
 
 <!--Multiple problem type selection input-->
 <script>
