--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -68,9 +68,9 @@
 
 
                                 <hr>
-                                <div class="text-center">
-                                    <a class="small" href="#">Login With OTP</a>
-                                </div>
+<!--                                <div class="text-center">-->
+<!--                                    <a class="small" href="#">Login With OTP</a>-->
+<!--                                </div>-->
                                 <div class="text-center">
                                     <a class="small" href="{% url 'register' %}">Create an Account!</a>
 
