--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -182,9 +182,9 @@ $(document).ready(function() {
                             </form>
 
                             <hr>
-                            <div class="text-center">
-                                <a class="small" href="otplogin.html">Already have an account? Login With OTP</a>
-                            </div>
+<!--                            <div class="text-center">-->
+<!--                                <a class="small" href="otplogin.html">Already have an account? Login With OTP</a>-->
+<!--                            </div>-->
 
                             <div class="text-center">
                                 <a class="small" href="{% url 'login' %}">Already have an account? Login With
