--- a/templates/dashboard/requestedproblem.html
+++ b/templates/dashboard/requestedproblem.html
@@ -40,16 +40,16 @@
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="{%url 'requestedproblems'%}">Requested Problems</a>
-                    <form class="form-inline">
-                        <button class="btn btn-sm btn-outline-secondary" type="button"> 24 Hrs</button>
-                        <button class="btn btn-sm btn-outline-secondary" type="button"> 48 Hrs</button>
-                        <button class="btn btn-sm btn-outline-secondary" type="button"> Older</button>
-                    </form>
-                    <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"
-                            class="navbar-toggler"
-                            data-target="#navbarNavDropdown" data-toggle="collapse" type="button">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+<!--                    <form class="form-inline">-->
+<!--                        <button class="btn btn-sm btn-outline-secondary" type="button"> 24 Hrs</button>-->
+<!--                        <button class="btn btn-sm btn-outline-secondary" type="button"> 48 Hrs</button>-->
+<!--                        <button class="btn btn-sm btn-outline-secondary" type="button"> Older</button>-->
+<!--                    </form>-->
+<!--                    <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"-->
+<!--                            class="navbar-toggler"-->
+<!--                            data-target="#navbarNavDropdown" data-toggle="collapse" type="button">-->
+<!--                        <span class="navbar-toggler-icon"></span>-->
+<!--                    </button>-->
 
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
@@ -58,11 +58,11 @@
                                 <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
                                    data-toggle="dropdown"
                                    href="#" id="navbarDropdownMenuLink" role="button">
-                                    Sort Problem Type
+                                    Sort Problems
                                 </a>
                                 <div aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu">
                                     {%for prob in all_problems%}
-                                    <a class="dropdown-item" href="#">{{prob}}</a>
+                                    <a class="dropdown-item" href="{%url 'requestedproblems'%}">{{prob}}</a>
                                     {%endfor%}
 
                                 </div>
