--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -45,8 +45,7 @@
                             Profile
                         </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" data-target="#logoutModal" data-toggle="modal"
-                           href="{% url 'logout' %}">
+                        <a class="dropdown-item" href="{% url 'logout' %}">
                             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                             Logout
                         </a>
