--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -36,7 +36,9 @@ $(document).ready(function() {
         <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <div class="col-lg-5 d-none d-lg-block bg-register-image" style='background:url(https://miro.medium.com/max/3200/1*8VdXULfDZUmwkkN8v7_wzA.jpeg);'>
+<!--                    <img src="" width="452" height="1200">-->
+                </div>
                 <div class="col-lg-7">
                     <div class="p-5">
                         <div class="text-center">
@@ -79,7 +81,7 @@ $(document).ready(function() {
                                             </div>
                                         </div>
                                         <div class="alert alert-danger" role="alert" id="mobile-error" style="display:none;">
-                                            0o0
+                                            Invalid Mobile Number
                                         </div>
                                         <div class="form-group">
                                             <label for="otp">OTP</label>
