late response of otp

--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -244,6 +244,8 @@ firebase.initializeApp(firebaseConfig);
         event.preventDefault();
         $('#mobile-btn').attr('disabled',true);
         $('#id_username').attr('readonly',true);
+        $('#otp').attr('readonly',false);
+
         let mobile = $('#id_username').val();
 
         if(mobile != "" && mobile.length == 10){
@@ -274,7 +276,6 @@ firebase.initializeApp(firebaseConfig);
                 console.log(window.confirmationResult);
                 $('#id_username').attr('readonly',true);
                 $("#mobile-btn").attr('disabled',true);
-                $('#otp').attr('readonly',false);
                 $('#otp-btn').attr('disabled',false);
                 // ...
             }).catch((error) => {
@@ -327,7 +328,22 @@ firebase.initializeApp(firebaseConfig);
 
 <!--Dynamic City selection from state id-->
 
-<script src="{%static 'js/cityload.js'%}"></script>
+<script>
+        $("#state").change(function () {
+      var url = $("#locationform").attr("data-location-url");  // get the url of the `cities` view
+      var state_id = $(this).val();  // get the selected state ID from the HTML input
+      $.ajax({                       // initialize an AJAX request
+        type: "GET",
+        url: url,                    // set the url of the request (= localhost:8000/load-courses/)
+        data: {
+          'state_id': state_id       // add the programming id to the GET parameters
+        },
+        success: function (data) {   // `data` is the return of the `load_courses` view function
+          $("#city").html(data);  // replace the contents of the course input with the data that came from the server
+        }
+      });
+    });
+</script>
 
 <!--Multiple problem type selection input-->
 <script>
