--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
                                             <label>Mobile</label>
                                             <div class="input-group">
                                                 {{ form.username|add_class:"form-control" }}
-                                                <input type="button" class="btn btn-primary input-group-append" value="Validate" id="mobile-btn">
+                                                <input type="button" class="btn btn-primary input-group-append" value="Send OTP" id="mobile-btn">
                                             </div>
                                         </div>
                                         <div class="alert alert-danger" role="alert" id="mobile-error" style="display:none;">
@@ -87,7 +87,7 @@ $(document).ready(function() {
                                             <label for="otp">OTP</label>
                                             <div class="input-group">
                                                 <input readonly type="text" class="form-control" id="otp" placeholder="Enter OTP" />
-                                                <input type="button" class="btn btn-primary input-group-append" value="  Verify  " disabled id="otp-btn"/>
+                                                <input type="button" class="btn btn-primary input-group-append" value="   Verify   " disabled id="otp-btn"/>
                                             </div>
                                         </div>
                                         <div class="alert alert-danger" role="alert" id="otp-error" style="display:none;">
