adding password reset functionality

--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -176,7 +176,7 @@ $(document).ready(function() {
                                             </h6>
 
                                     </div>
-                                    <button class="btn btn-primary btn-block hide" type="submit">
+                                    <button class="btn btn-primary btn-user btn-block hide" type="submit">
                                         Register
                                     </button>
                             <hr>
