--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -59,7 +59,7 @@
                                     <!--                                    <a class="btn btn-primary btn-user btn-block" href="{% url 'dashboard' %}">-->
                                     <!--                                        Login-->
                                     <!--                                    </a>-->
-                                    <button class="btn btn-primary btn-block" type="submit">
+                                    <button class="btn btn-primary btn-user btn-block" type="submit">
                                         Login
                                     </button>
 
@@ -69,7 +69,7 @@
 
                                 <hr>
                                 <div class="text-center">
-                                    <a class="small" href="#">Login With OTP</a>
+                                    <a class="small" href="{%url 'reset_password' %}">Forgot Password</a>
                                 </div>
                                 <div class="text-center">
                                     <a class="small" href="{% url 'register' %}">Create an Account!</a>
