after updating user profile, updated context not reflecting till you refresh the page

--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -49,7 +49,7 @@
                     </li>
                     <li class="nav-item">
                         <a aria-controls="profile" aria-selected="false" class="nav-link"
-                           href="{% url 'reset_password' %}"
+                           href="{% url 'reset_password_profile' %}"
                            id="profile-tab" role="tab">Security</a>
                     </li>
                 </ul>
