--- a/templates/login/password_change.html
+++ b/templates/login/password_change.html
@@ -47,7 +47,7 @@
                            id="home-tab" role="tab">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a aria-controls="profile" aria-selected="false" class="nav-link active" href="{% url 'reset_password' %}"
+                        <a aria-controls="profile" aria-selected="false" class="nav-link active" href="{% url 'reset_password_profile' %}"
                            id="profile-tab" role="tab">Security</a>
                     </li>
                 </ul>
