dashboard content row removed

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -111,44 +111,44 @@
                     </div>
                 </div>
 
-                <!-- Content Row -->
-                <div class="row">
-                    <div class="col-xxl-4 col-xl-6 mb-4">
-                        <div class="card card-header-actions h-100">
-                            <div class="card-header">
-                                Recent Activity
-                            </div>
-                            <div class="card-body">
+<!--                &lt;!&ndash; Content Row &ndash;&gt;-->
+<!--                <div class="row">-->
+<!--                    <div class="col-xxl-4 col-xl-6 mb-4">-->
+<!--                        <div class="card card-header-actions h-100">-->
+<!--                            <div class="card-header">-->
+<!--                                Recent Activity-->
+<!--                            </div>-->
+<!--                            <div class="card-body">-->
 
 
-                                <ul class="timeline">
-                                    <li>
-                                        <a href="#" target="_blank">Yogesh Helped 5 Peopls</a>
-                                        <a class="float-right" href="#">21 March, 2021 05:00:00 PM</a>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque
-                                            diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis
-                                            mollis. Duis sagittis ligula in sodales vehicula....</p>
-                                    </li>
-                                    <li>
-                                        <a href="#">Free Food Available</a>
-                                        <a class="float-right" href="#">4 March, 2021 10:00:00 AM</a>
-                                        <p>Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam
-                                            pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>
-                                    </li>
-                                    <li>
-                                        <a href="#">New vaccine Stock arrived</a>
-                                        <a class="float-right" href="#">1 April, 2021 06:00:00 PM </a>
-                                        <p>Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio,
-                                            tincidunt vitae nunc vitae, mollis pharetra velit. Sed nec tempor
-                                            nibh...</p>
-                                    </li>
-                                </ul>
+<!--                                <ul class="timeline">-->
+<!--                                    <li>-->
+<!--                                        <a href="#" target="_blank">Yogesh Helped 5 Peopls</a>-->
+<!--                                        <a class="float-right" href="#">21 March, 2021 05:00:00 PM</a>-->
+<!--                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque-->
+<!--                                            diam non nisi semper, et elementum lorem ornare. Maecenas placerat facilisis-->
+<!--                                            mollis. Duis sagittis ligula in sodales vehicula....</p>-->
+<!--                                    </li>-->
+<!--                                    <li>-->
+<!--                                        <a href="#">Free Food Available</a>-->
+<!--                                        <a class="float-right" href="#">4 March, 2021 10:00:00 AM</a>-->
+<!--                                        <p>Curabitur purus sem, malesuada eu luctus eget, suscipit sed turpis. Nam-->
+<!--                                            pellentesque felis vitae justo accumsan, sed semper nisi sollicitudin...</p>-->
+<!--                                    </li>-->
+<!--                                    <li>-->
+<!--                                        <a href="#">New vaccine Stock arrived</a>-->
+<!--                                        <a class="float-right" href="#">1 April, 2021 06:00:00 PM </a>-->
+<!--                                        <p>Fusce ullamcorper ligula sit amet quam accumsan aliquet. Sed nulla odio,-->
+<!--                                            tincidunt vitae nunc vitae, mollis pharetra velit. Sed nec tempor-->
+<!--                                            nibh...</p>-->
+<!--                                    </li>-->
+<!--                                </ul>-->
 
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
 
             </div>
