--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -151,7 +151,7 @@ $(document).ready(function() {
                                     </div>
                                     <div class="form-group ">
                                         <label>Problem Types</label>
-                                        <select class="form-control hide" name="problemtypes[]" id="demo" multiple></select>
+                                        <select class="form-control hide" name="problemtypes[]" id="demo" multiple required></select>
                                     </div>
 
                                     <div class="form-group row">
